Rendered students section data

--- a/index.html
+++ b/index.html
@@ -279,71 +279,38 @@
 								<input type="text" class="browser-default" id="studentSectionSearch">
 							</div>
 							<div class="" id="studentSectionsBody">
-								<div class="studentSectionDiv">
-									<div class="col m2 l2 fullHeight displayFlex">
-										<img src="./images/profile2.jpg" class="studentsSectionImages">
-									</div>
-									<div class="col m7 l7 fullHeight">
-										<div class="halfHeight studentsSectionName">Wade Cooper</div>
-										<div class="halfHeight studentsSectionNumber">08133282428</div>
-									</div>
-									<div class="col m3 l3 fullHeight">
-										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
-										<div class="halfHeight studentsSectionLevel">200L</div>
-									</div>
-								</div>
-								<div class="studentSectionDiv">
-									<div class="col m2 l2 fullHeight displayFlex">
-										<img src="./images/profile1.jpg" class="studentsSectionImages">
-									</div>
-									<div class="col m7 l7 fullHeight">
-										<div class="halfHeight studentsSectionName">Darrel Miles</div>
-										<div class="halfHeight studentsSectionNumber">07029282437</div>
-									</div>
-									<div class="col m3 l3 fullHeight">
-										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
-										<div class="halfHeight studentsSectionLevel">200L</div>
+								<div id="studentsSections">
+									<div class="studentSectionDiv">
+										<div class="col m2 l2 fullHeight displayFlex">
+											<img src="./images/profile2.jpg" class="studentsSectionImages">
+										</div>
+										<div class="col m7 l7 fullHeight">
+											<div class="halfHeight studentsSectionName">Wade Cooper</div>
+											<div class="halfHeight studentsSectionNumber">08133282428</div>
+										</div>
+										<div class="col m3 l3 fullHeight">
+											<div class="halfHeight studentsSectionClinicNo">ST054182</div>
+											<div class="halfHeight studentsSectionLevel">200L</div>
+										</div>
 									</div>
 								</div>
-								<div class="studentSectionDiv">
-									<div class="col m2 l2 fullHeight displayFlex">
-										<img src="./images/profile4.jpeg" class="studentsSectionImages">
-									</div>
-									<div class="col m7 l7 fullHeight">
-										<div class="halfHeight studentsSectionName">Jennie Fox</div>
-										<div class="halfHeight studentsSectionNumber">08133282428</div>
-									</div>
-									<div class="col m3 l3 fullHeight">
-										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
-										<div class="halfHeight studentsSectionLevel">200L</div>
-									</div>
+								<!-- Loader -->
+								<div class="displayFlexColumn" id="studentsLoaderBody">
+									<br />
+									<div class="preloader-wrapper active">
+									    <div class="spinner-layer spinner-blue-only">
+										    <div class="circle-clipper left">
+										        <div class="circle"></div>
+										    </div><div class="gap-patch">
+										        <div class="circle"></div>
+										    </div><div class="circle-clipper right">
+										        <div class="circle"></div>
+										    </div>
+									    </div>
+									 </div>
 								</div>
-								<div class="studentSectionDiv">
-									<div class="col m2 l2 fullHeight displayFlex">
-										<img src="./images/profile2.jpg" class="studentsSectionImages">
-									</div>
-									<div class="col m7 l7 fullHeight">
-										<div class="halfHeight studentsSectionName">Wade Cooper</div>
-										<div class="halfHeight studentsSectionNumber">08133282428</div>
-									</div>
-									<div class="col m3 l3 fullHeight">
-										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
-										<div class="halfHeight studentsSectionLevel">200L</div>
-									</div>
-								</div>
-								<div class="studentSectionDiv">
-									<div class="col m2 l2 fullHeight displayFlex">
-										<img src="./images/profile4.jpeg" class="studentsSectionImages">
-									</div>
-									<div class="col m7 l7 fullHeight">
-										<div class="halfHeight studentsSectionName">Jennie Fox</div>
-										<div class="halfHeight studentsSectionNumber">08133282428</div>
-									</div>
-									<div class="col m3 l3 fullHeight">
-										<div class="halfHeight studentsSectionClinicNo">ST054182</div>
-										<div class="halfHeight studentsSectionLevel">200L</div>
-									</div>
-								</div>
+								<!-- Students section Observer -->
+								<div id="studentObserver"></div>
 							</div>
 						</div>
 					</div>
