Coded the login page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="html">
 <head>
 	<title>Health App</title>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" description="Bello Gbadebo">
-    <meta name="TestimonyBank" description="A simple web app to store peoples testimonies">
+    <meta name="Health App" description="Distress calls made easy">
     <!-- Css -->
     <link rel="stylesheet" type="text/css" href="css/display.css">
     <link rel="stylesheet" type="text/css" href="css/fonts/base.css">
