--- a/login.html
+++ b/login.html
@@ -61,7 +61,21 @@
 			</div>
 		</div>
 	</section>
-
+	<!-- Login Loader -->
+	<section class="displayFlex" id="loginLoaderBackground"></section>
+	<section class="displayFlex" id="loginLoader">
+		<div class="preloader-wrapper big active">
+		    <div class="spinner-layer spinner-blue-only">
+			    <div class="circle-clipper left">
+			        <div class="circle"></div>
+			    </div><div class="gap-patch">
+			        <div class="circle"></div>
+			    </div><div class="circle-clipper right">
+			        <div class="circle"></div>
+			    </div>
+		    </div>
+		</div>
+	</section>
 
 
 	<!-- Message Displayed on mobile -->
