Add password preview feature on Login page

--- a/login.html
+++ b/login.html
@@ -51,9 +51,12 @@
 					<input type="text" id="username">
 					<label for="username">Username</label>
 				</div>
-				<div class="loginInput input-field">
-					<input type="text" id="password">
+				<div class="displayFlex loginInput input-field">
+					<input type="password" id="password">
 					<label for="password">Password</label>
+					<span id="passwordViewIcon">
+						<i class="fas fa-eye"></i>
+					</span>
 				</div>
 				<div class="loginInput">
 					<div class="displayFlex" id="loginBtn">Login</div>
